# GEN-AI-test-

./: pyproject.toml  test.py  test2.py
2025-03-10/: simplyfied_RAG.py
2025-10-18/: function-calling.ipynb
example/notebook/: examples.ipynb
openai-client/: one_more_client.py  openai_client09.py  openai_client_demo.py  pyproject.toml  structured_output_demo.py
