[project]
name = "gen-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Arūnė Bražiūnaitė",email = "117632336+AruneBS@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
